k8s/apps/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-deployment
  template:
    metadata:
      labels:
        app: api-deployment
    spec:
      containers:
      - name: api
        image: registry.digitalocean.com/gta-mm-k8s/api:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
      imagePullSecrets:
        - name: gta-mm-k8s


---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

  selector:
    app: api-deployment


#########################
# For HTTP (change to this when we have a domain)

# apiVersion: v1
# kind: Service
# metadata:
#   name: api-service
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
#     service.beta.kubernetes.io/do-loadbalancer-certificate-id: "api-self-cert"
# spec:
#   type: LoadBalancer
#   ports:
#     - name: https
#       protocol: TCP
#       port: 443
#       targetPort: 80

#   selector:
#     app: api-deployment
