k8s/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: reload-api-ip
    networking.gke.io/managed-certificates: managed-cert
spec:
  defaultBackend:
    service:
      name: api-service
      port:
        number: 80
