k8s/apps/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-service
  namespace: default
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "reload-api"
spec:
  defaultBackend:
    service:
      name: api-service
      port:
        number: 80
